# Flame-Autoclicker

./: .gitignore  AutoClicker.h  CMakeLists.txt  Content.cpp  Content.h  FlameAutoclicker.nsi  Functions.h  README.md  TitleBar.cpp  autoclicker.c  autoclicker_gui.py  hotkeysettingstab.cpp  main.cpp
NSIS/: FlameAutoclicker.nsi
src/: .gitignore  AutoClicker.cpp  AutoClicker.h  CMakeLists.txt  Content.cpp  Content.h  FlameAutoclicker.nsi  Functions.cpp  MainWindow.h  QtBlaze.h  README.md  TitleBar.h  hotkeysettingstab.cpp  hotkeysettingstab.h  hotkeysettingswindow.cpp  hotkeysettingswindow.h  main.cpp  mainwindow.cpp
src/assets/: assets.qrc
